--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Homes#index</h1>
-<p>Find me in app/views/homes/index.html.erb</p>
+<header class="header-5">
+  <div class="header-inner">
+    <div class="logo">
+      <%= link_to root_path do %>
+      <hi class="title is-4" style="font-family:cursive;">Legends</hi>
+      <% end %>
+    </div>
+    <nav class="header-nav">
+      <ul class="header-nav-list"> 
+        <% if user_signed_in? %>
+        <%# <li class="header-nav-item"><%= link_to "ツイート", tweets_path %></li>  %>
+        <%# <li class="header-nav-item"><%= link_to "ボディメイク",  body_makes_path %></li>  %>
+        <%# <li class="header-nav-item"><%= link_to "食事記録", meal_records_path %></li>  %>
+        <%# <li class="header-nav-item"><%= link_to "#{current_user.name}", user_path(current_user.id) %></li> %>
+        <li class="header-nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
+        <% else %>
+        <li class=“header-nav-item”><%= link_to "ログイン", new_user_session_path %></li>
+        <li class=“header-nav-item”><%= link_to "新規登録", new_user_registration_path %></li>
+        <% end %>
+      </ul>
+
+    </nav>
+  </div>
+</header>
+
