--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <%# <%= render "shared/header" %> 
+    <%= render "shared/header" %>
     <%= yield %>
   </body>
 </html>
