--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,5 +1,5 @@
 <form>
-<%= form_with model: @tweet, local: true do |f|%>
+<%= form_with model: tweet, local: true do |f|%>
   <div class="field">
     <%= f.label :text, "ツイート", class:"form-text"%><br />
     <%= f.text_area :text, class:"form-text", id: "tweet-text", placeholder: "つぶやこう！"%>
