--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,14 +2,14 @@
   <div class="header-inner">
     <div class="logo">
       <%= link_to root_path do %>
-      <hi class="title is-4" style="font-family:cursive;">Legends</hi>
+      <hi class="title is-4" style="font-family:cursive;">Powers</hi>
       <% end %>
     </div>
     <nav class="header-nav">
       <ul class="header-nav-list"> 
         <% if user_signed_in? %>
         <li class="header-nav-item"><%= link_to "ツイート", tweets_path %></li> 
-        <%# <li class="header-nav-item"><%= link_to "ボディメイク",  body_makes_path %></li>  %>
+        <li class="header-nav-item"><%= link_to "ボディメイク",  body_makes_path %></li>
         <%# <li class="header-nav-item"><%= link_to "食事記録", meal_records_path %></li>  %>
         <%# <li class="header-nav-item"><%= link_to "#{current_user.name}", user_path(current_user.id) %></li> %>
         <li class="header-nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
