コメント機能の実装

--- a/app/views/tweets/_tweet.html.erb
+++ b/app/views/tweets/_tweet.html.erb
@@ -3,6 +3,6 @@
 </div>
 <div class="tweet__body">
     <%= link_to tweet[:text], tweet_path(tweet.id), class: :tweet__title %>
-    <%= link_to "by #{tweet.user.name}", user_path(tweet.user), class: :tweet__user 
+    <%= link_to "by #{tweet.user.name}", user_path(tweet.user), class: :tweet__user %>
   </div>
 </div>
