食事記録のビューの作成

--- a/app/views/meal_records/index.html.erb
+++ b/app/views/meal_records/index.html.erb
@@ -1,2 +1,11 @@
-<h1>MealRecords#index</h1>
-<p>Find me in app/views/meal_records/index.html.erb</p>
+<div class="contents">
+<% @meal_records.each do |meal_record| %>
+  <%= meal_record.user.name %>
+  <%= meal_record.text %>
+  <%= link_to meal_record_path(meal_record.id) do %>
+  <div class='meal_record-img-content'>
+  <%= image_tag meal_record.image, class: "meal_record-img" %>
+    <% end %>
+  <%end%>
+  <%= render partial: "form", locals: { meal_record: @meal_record }, class:"meal_record-form" %> 
+</div>
