--- a/app/views/meal_records/new.html.erb
+++ b/app/views/meal_records/new.html.erb
@@ -1,2 +1,5 @@
-<h1>MealRecords#new</h1>
-<p>Find me in app/views/meal_records/new.html.erb</p>
+
+  <div class="contents row">
+    <div class="container">
+      <%= render partial: "meal_records/form", locals: { meal_record: @meal_record } %>  
+  </div>
