--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -10,8 +10,8 @@
         <% if user_signed_in? %>
         <li class="header-nav-item"><%= link_to "ツイート", tweets_path %></li> 
         <li class="header-nav-item"><%= link_to "ボディメイク",  body_makes_path %></li>
-        <%# <li class="header-nav-item"><%= link_to "食事記録", meal_records_path %></li>  %>
-        <%# <li class="header-nav-item"><%= link_to "#{current_user.name}", user_path(current_user.id) %></li> %>
+        <li class="header-nav-item"><%= link_to "食事記録", meal_records_path%></li>  
+        <li class="header-nav-item"><%= link_to "#{current_user.name}", user_path(current_user.id) %></li>
         <li class="header-nav-item"><%= link_to "ログアウト", destroy_user_session_path, method: :delete %></li>
         <% else %>
         <li class=“header-nav-item”><%= link_to "ログイン", new_user_session_path %></li>
