--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -1,5 +1,5 @@
-
 <%= form_with model: tweet, local: true do |f|%>
+<%= render "shared/error_messages", model: f.object %>
   <div class="field">
     <%= f.label :text, "ツイート", class:"form-text"%><br />
     <%= f.text_area :text, class:"form-text", id: "tweet-text", placeholder: "つぶやこう！"%>
