--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,11 +10,13 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ *= require scaffolds
+ *= require simple_calendar
  *= require_tree .
  *= require_self
+
  */
 
   @import "sanitize.css";
   @import "header.css";
   @import "form.css"
-  // @import "simple_calendar";
