--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,3 @@
-<%= render partial:"meal_records/meal_record", locals: { meal_record: @meal_record } %>
-
-<%= render partial:"body_makes/body_make", locals: { body_make: @body_make } %>
-
+<%= month_calendar do |date| %>
+  <%= date %>
+<% end %>
