node-sassのダウンロード

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -82,3 +82,9 @@ div {
 label {
   display: block;
 }
+
+.simple-calender {
+    background-color: #fff;
+    border: 20px solid #2a2b2f;
+    margin-top: 60px;
+}
