食事記録の修正

--- a/app/views/meal_records/index.html.erb
+++ b/app/views/meal_records/index.html.erb
@@ -1,6 +1,6 @@
 <div class="contents">
   <%= render partial: "form", locals: { meal_record: @meal_record }, class:"meal_record-form" %> 
-  <ul class="meal_record">
+  <ul class="post">
     <% @meal_records.each do |meal_record| %>
     <li>
       <%= link_to meal_record_path(meal_record.id) do %>
