--- a/app/views/body_makes/index.html.erb
+++ b/app/views/body_makes/index.html.erb
@@ -1,6 +1,6 @@
 <div class="contents">
   <%= render partial: "form", locals: { body_make: @body_make }, class:"body_make-form" %> 
-  <ul class="body_make">
+  <ul class="post">
     <% @body_makes.each do |body_make| %>
     <li>
       <%= link_to body_make_path(body_make.id) do %>
