--- a/app/views/meal_records/_form.html.erb
+++ b/app/views/meal_records/_form.html.erb
@@ -14,6 +14,7 @@
     <div class="field">
     <%= f.label :calorie, "カロリー" %><br />
     <%= f.text_field :calorie, class:"form-text" %>
+    <%= link_to '参考サイト', 'https://calorie.slism.jp/' %>
   </div>
 
   <div class="field">
