--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,6 +1,6 @@
 <div class="contents">
   <%= render partial: "form", locals: { tweet: @tweet }, class:"tweet-form" %> 
-  <ul class="tweet">
+  <ul class="post">
     <% @tweets.each do |tweet| %>
     <li>
       <%= link_to tweet_path(tweet.id) do %>
