カレンダーの小数点の表示

--- a/app/views/meal_records/_form.html.erb
+++ b/app/views/meal_records/_form.html.erb
@@ -13,7 +13,7 @@
 
     <div class="field">
     <%= f.label :calorie, "カロリー" %><br />
-    <%= f.text_field :calorie, class:"form-text" %>
+    <%= f.text_field :calorie, class:"form-text" %></br>
     <%= link_to '参考サイト', 'https://calorie.slism.jp/' %>
   </div>
 
