コントローラの作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,7 @@
   @import "header.css";
   @import "form.css";
   @import "post.css";
+  @import "body_make.css";
 
 
 .contents { padding-top: 60px; }
