--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,3 @@
-<%# <%= render partial: "tweets/form", locals: { tweet: @tweet } %> 
-<%# <%= render partial: "body_makes/form", locals: { body_make: @body_make } %>   %>
-<%# <%= render partial: "meal_records/form", locals: { meal_record: @meal_record } %>   %> %>
+<%= render partial: "tweets/form", locals: { tweet: @tweet } %>
+<%= render partial: "body_makes/form", locals: { body_make: @body_make } %>
+<%= render partial: "meal_records/form", locals: { meal_record: @meal_record } %>
