--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,3 +36,15 @@
   display: flex;
   align-items: flex-start
 }
+
+.follow-btn {
+  width: 100px;
+  text-align: center;
+  border-radius: 20px;
+}
+
+.follow-btn a:hover{
+  background-color: #f5c500;
+  font-weight: bold;
+
+}
