--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -5,13 +5,20 @@
       <% @tweets.each do |tweet| %>
       <li>
         <%= link_to tweet_path(tweet.id) do %>
+          <h2><%= tweet.user.name %></h2>
+          <div class="follow-btn">
+            <% if current_user.following?(tweet.user) %>
+              <%= link_to "フォローを外す", user_relationships_path(tweet.user.id), method: :delete %>
+            <% else %>
+              <%= link_to "フォローする", user_relationships_path(tweet.user.id), method: :post %>
+            <% end %>
+          </div>
+          <p><%= tweet.text %></p>
           <div class='tweet-img-content'>
             <% if tweet.image.present? %>
             <%= image_tag tweet.image.variant(resize:'300x200'), class: "tweet-img" %>
             <% end %>
           </div>
-          <h2><%= tweet.user.name %></h2>
-          <p><%= tweet.text %></p>
         <% end %><!-- link_to tweet_path -->
       </li>
       <% end %>
