--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -15,12 +15,16 @@
   padding: 0 0.8em;
   margin: 0 auto;
   font-size: 1.2em;
-  justify-content: space-around;
+  justify-content: space-between;
 
 }
 
 .header-nav-list {
-  display: inline-block;
+  display: flex;
+  align-content: center;
+  flex-direction: row;
+  align-items: baseline;
+  flex-wrap: nowrap;
 }
 
 .header-nav-item {
@@ -79,3 +83,41 @@
 text-decoration: none;
 }
 
+/* Font Awesomeを使用しています。*/
+.form2 {
+  position: relative;
+}
+
+.form2-input {
+  box-sizing: border-box;
+  width: 100%;
+  height: 30px;
+  padding: 0 10px 0 34px;
+  margin: 5px 0;
+  font-size: 1em;
+  color: #333;
+  border: solid 1px #ccc;
+  border-radius: 5px;
+  outline: 0;
+  transition: 0.3s;
+  -webkit-appearance: none;
+}
+
+.form2-input:focus {
+  border: 1px solid #00b5ad;
+}
+
+.form2-button {
+  position: absolute;
+  top: 0;
+  left: 2px;
+  box-sizing: content-box;
+  width: 30px;
+  height: 40px;
+  padding: 0;
+  vertical-align: vertical-align;
+  pointer-events: none;
+  background: inherit;
+  border: 0;
+  opacity: 0.54;
+}
