投稿画像なしの時の画像設定

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -16,7 +16,20 @@
   margin: 0 auto;
   font-size: 1.2em;
   justify-content: space-between;
+}
 
+.logo a {
+  text-decoration: none;
+}
+
+.title.is-4 {
+  font-family: cursive;
+  font-size: x-large;
+}
+
+.title.is-4:hover {
+  color: #2a2b2f;
+  font-weight: bold;
 }
 
 .header-nav-list {
