--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div class="header-inner">
     <div class="logo">
       <%= link_to root_path do %>
-      <hi class="title is-4" style="font-family:cursive;">Powers</hi>
+      <hi class="title is-4">Powers</hi>
       <% end %>
     </div>
     <nav class="header-nav">
