--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -39,7 +39,7 @@ form > * + * {
   position: relative;
   display: inline-block;
   padding: 0.4em 1.6em;
-  font-size: 0.8em;
+  font-size: 15epx;
   color: #2a2b2f;
   text-decoration: none;
   user-select: none;
