--- a/app/views/body_makes/index.html.erb
+++ b/app/views/body_makes/index.html.erb
@@ -5,7 +5,7 @@
       <%# 5.times do |i| %>
       <% @body_makes.each do |body_make| %>
       <li>
-        <%= link_to body_make_path(body_make.id) do %>
+        <%# <%= link_to body_make_path(body_make.id) do %> 
           <div class='body_make-img-content'>
           </div>
           <h2><%#= body_make.user.name %></h2>
@@ -13,7 +13,9 @@
           <p><%= body_make.text %></p>
             <% if body_make.image.present? %>
             <%= image_tag body_make.image, class: "body-make-img" %>
-            <% end %>
+            <% else %>
+            <%= image_tag 'DSC_1924-1024x683.jpeg', class: "body-make-img"%>
+            <%# <% end %> 
         <% end %><!-- link_to body_make_path -->
       </li>
       <%# end %>
