--- a/app/views/meal_records/index.html.erb
+++ b/app/views/meal_records/index.html.erb
@@ -6,12 +6,15 @@
       <li>
         <%= link_to meal_record_path(meal_record.id) do %>
           <div class='meal_record-img-content'>
+            <p><%= meal_record.text %></p>
+            <p><%= meal_record.calorie %> kcal</p>
             <% if meal_record.image.present? %>
             <%= image_tag meal_record.image.variant(resize:'300x200'), class: "meal_record-img" %>
+            <% else %>
+            <%= image_tag "images.jpeg", class: "meal-record-img" %>
             <% end %>
           </div>
-          <h2><%= meal_record.user.name %></h2>
-          <p><%= meal_record.text %></p>
+          <%# <h2><%= meal_record.user.name %></h2> 
         <% end %><!-- link_to meal_record_path -->
       </li>
       <% end %>
