コンフリクトの修正

--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -20,11 +20,12 @@
 
 .logo a {
   text-decoration: none;
+  color: #2a2b2f;
 }
 
 .title.is-4 {
   font-family: cursive;
-  font-size: x-large;
+  font-size: 35px;
 }
 
 .title.is-4:hover {
