--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,6 +2,7 @@
   <div class="header-inner">
     <div class="logo">
       <%= link_to root_path do %>
+      <%= image_tag "maccho2.png", class: "logo-img"%>
       <hi class="title is-4">Powers</hi>
       <% end %>
     </div>
