--- a/app/views/body_makes/index.html.erb
+++ b/app/views/body_makes/index.html.erb
@@ -10,7 +10,7 @@
           </div>
           <h2><%#= body_make.user.name %></h2>
           <h3><%= body_make.weight %>kg</h3>
-          <%= body_make.updated_at.strftime("%Y-%m-%d %H:%M")%>
+          <%= body_make.updated_at.strftime("%Y年%m月%d日")%>
           <p><%= body_make.text %></p>
             <% if body_make.image.present? %>
             <%= image_tag body_make.image, class: "body-make-img" %>
