--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -1,28 +1,19 @@
-<main class="main">
-  <div class="inner">
+<main class="contents">
+  <div class="col-2">
     <div class="tweet__wrapper">
-      <p class="tweet__hedding">
-        <%= @tweet.text %>
-      </p>
-      <%= link_to "by #{@tweet.user.name}", user_path(@tweet.user), class: :tweet__user %>
+      <h2><%= link_to @tweet.user.name, user_path(@tweet.user) %></h2>
 
       <% if user_signed_in? && current_user.id == @tweet.user_id %>
-        <div class="tweet__manage">
-          <%= link_to "削除する", tweet_path(@tweet.id), method: :delete, class: :tweet__btn %>
+      <p><%= @tweet.text %></p>
+        <%# <div class="tweet__manage">
+          <%= link_to "削除する", tweet_path(@tweet.id), method: :delete, class: :tweet__btn %> 
         </div>
       <% end %>
       <% if @tweet.image.present? %>
-        <div class="tweet__image">
-          <%= image_tag @tweet.image %>
+        <div class="tweet-img-content">
+          <%= image_tag @tweet.image, class:"tweet-img"%>
         </div>
         <% end %>
-      <div class="tweet__body">
-        <div class="tweet__detail">
-            <%= @tweet.text %>
-          </p>
-        </div>
-        
-      </div>
       <div class="tweet__comments">
 
           <% if user_signed_in? %>
