--- a/app/views/body_makes/index.html.erb
+++ b/app/views/body_makes/index.html.erb
@@ -2,24 +2,22 @@
   <div class="col-2">
     <%= render partial: "form", locals: { body_make: @body_make }, class:"bodymake-form" %> 
     <ul class="post card-list">
-      <%# 5.times do |i| %>
-      <% @body_makes.each do |body_make| %>
-      <li>
-        <%# <%= link_to body_make_path(body_make.id) do %> 
-          <div class='body_make-img-content'>
-          </div>
-          <h2><%#= body_make.user.name %></h2>
-          <h3><%= body_make.weight %>kg</h3>
-          <%= body_make.updated_at.strftime("%Y年%m月%d日")%>
-          <p><%= body_make.text %></p>
-            <% if body_make.image.present? %>
-            <%= image_tag body_make.image, class: "body-make-img" %>
-            <% else %>
-            <%= image_tag 'DSC_1924-1024x683.jpeg', class: "body-make-img"%>
-            <%# <% end %> 
-        <% end %><!-- link_to body_make_path -->
-      </li>
-      <%# end %>
+      <%# <% if user_signed_in? && current_user.id == @body_make.id %> 
+        <% @body_makes.each do |body_make| %>
+        <li>
+            <div class='body_make-img-content'>
+            </div>
+            <h2><%#= body_make.user.name %></h2>
+            <h3><%= body_make.weight %>kg</h3>
+            <%= body_make.updated_at.strftime("%Y年%m月%d日")%>
+            <p><%= body_make.text %></p>
+              <% if body_make.image.present? %>
+              <%= image_tag body_make.image, class: "body-make-img" %>
+              <% else %>
+              <%= image_tag 'DSC_1924-1024x683.jpeg', class: "body-make-img"%>
+          <% end %><!-- link_to body_make_path -->
+        </li>
+        <%# <% end %> 
       <% end %>
     </ul>
   </div>
