--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -17,21 +17,21 @@
       <label class="form-text">ニックネーム ※</label>
       <span class="indispensable"></span>
     </div>
-    <%= f.text_field :name, class:"input-default", id:"name", placeholder:"例) アーノルド", maxlength:"40" %>
+    <%= f.text_field :name, class:"form-text", id:"name", placeholder:"例) アーノルド", maxlength:"40" %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">メールアドレス  ※</label>
       <span class="indispensable"></span>
     </div>
-    <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
+    <%= f.email_field :email, class:"form-text", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">パスワード  ※</label>
       <span class="indispensable"></span>
     </div>
-    <%= f.password_field :password, class:"input-default", id:"password", placeholder:"6文字以上の半角英数字" %>
+    <%= f.password_field :password, class:"form-text", id:"password", placeholder:"6文字以上の半角英数字" %>
     <p class='info-text'>※英字と数字の両方を含めて設定してください</p>
   </div>
   <div class="form-group">
@@ -39,7 +39,7 @@
       <label class="form-text">パスワード(確認)  ※</label>
       <span class="indispensable"></span>
     </div>
-    <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
+    <%= f.password_field :password_confirmation, class:"form-text", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
   </div>
   
   <div class="form-group">
@@ -47,7 +47,7 @@
       <label class="form-text">プロフィール</label>
       <span class="indispensable"></span>
     </div>
-    <%= f.text_area :profile, class:"input-default", id:"name", placeholder:"意気込み・トレーニング歴など", maxlength:"40" %>
+    <%= f.text_area :profile, class:"form-text", id:"name", placeholder:"意気込み・トレーニング歴など", maxlength:"40" %>
   </div>
 
   <div class="form-group">
@@ -55,7 +55,7 @@
       <label class="form-text">年齢  ※</label>
       <span class="indispensable"></span>
     </div>
-    <%= f.text_field :age, class:"input-default", id:"age", placeholder:"例) 24", autofocus: true %>
+    <%= f.text_field :age, class:"form-text", id:"age", placeholder:"例) 24", autofocus: true %>
   </div>
 
   <div class="form-group">
@@ -63,7 +63,7 @@
       <label class="form-text">身長  ※</label><br>
       <span class="indispensable">(数字のみ可・小数第一位まで可)</span>
     </div>
-    <%= f.text_field :height, class:"input-default", id:"height", placeholder:"例) 175.5", autofocus: true %>
+    <%= f.text_field :height, class:"form-text", id:"height", placeholder:"例) 175.5", autofocus: true %>
   </div>
 
   <div class="form-group">
@@ -71,7 +71,7 @@
       <label class="form-text">体重  ※</label><br>
       <span class="indispensable"> (数字のみ可・小数第一位まで可)</span>
     </div>
-    <%= f.text_field :weight, class:"input-default", id:"weight", placeholder:"例) 68.2", autofocus: true %>
+    <%= f.text_field :weight, class:"form-text", id:"weight", placeholder:"例) 68.2", autofocus: true %>
   </div>
 
   <div class="form-group">
@@ -79,12 +79,12 @@
       <label class="form-text">体脂肪率</label>
       <span class="indispensable"></span>
     </div>
-    <%= f.text_field :body_fat_percentage, class:"input-default", id:"body_fat_percentage", placeholder:"例) 15", autofocus: true %>
+    <%= f.text_field :body_fat_percentage, class:"form-text", id:"body_fat_percentage", placeholder:"例) 15", autofocus: true %>
   </div>
 
 
   <div class='register-btn'>
-    <%= f.submit "会員登録" ,class:"register-red-btn" %>
+    <%= f.submit "会員登録" ,class:"button-gradation", style:"margin-top: 20px" %>
   </div>
 </div>
 </div>
