--- a/app/views/meal_records/index.html.erb
+++ b/app/views/meal_records/index.html.erb
@@ -2,24 +2,26 @@
   <div class="col-2">
     <%= render partial: "form", locals: { meal_record: @meal_record }, class:"meal_record-form" %> 
     <ul class="post card-list">
-      <% @meal_records.each do |meal_record| %>
-      <li>
-        <%# <%= link_to meal_record_path(meal_record.id) do %> 
-          <div class='meal_record-img-content'>
-            <h2 class="meal-text"><%= meal_record.text %></h2>
-            <%= meal_record.updated_at.strftime("%Y年%m月%d日")%>の
-            <%= meal_record.meal_time.name %>
-            <p><%= meal_record.calorie %> kcal</p>
-              <% if meal_record.image.present? %>
-              <%= image_tag meal_record.image.variant(resize:'300x200'), class: "meal_record-img" %>
-              <% else %>
-              <%= image_tag "test_image.png", class:"meal-record-img" %>
-              <% end %>
-          </div>
-          <%# <h2><%= meal_record.user.name %></h2> 
+      <%# <% if user_signed_in? && current_user.id == @meal_record.id %> 
+        <% @meal_records.each do |meal_record| %>
+        <li>
+          <%# <%= link_to meal_record_path(meal_record.id) do %> 
+            <div class='meal_record-img-content'>
+              <h2 class="meal-text"><%= meal_record.text %></h2>
+              <%= meal_record.updated_at.strftime("%Y年%m月%d日")%>の
+              <%= meal_record.meal_time.name %>
+              <p><%= meal_record.calorie %> kcal</p>
+                <% if meal_record.image.present? %>
+                <%= image_tag meal_record.image.variant(resize:'300x200'), class: "meal_record-img" %>
+                <% else %>
+                <%= image_tag "test_image.png", class:"meal-record-img" %>
+                <%# <% end %> 
+            </div>
+            <%# <h2><%= meal_record.user.name %></h2> 
 
-        <%# <% end %><!-- link_to meal_record_path --> 
-      </li>
+          <%# <% end %><!-- link_to meal_record_path --> 
+        </li>
+        <% end %>
       <% end %>
     </ul>
   </div>
