--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -10,7 +10,7 @@
             <% if current_user.following?(tweet.user) %>
               <%= link_to "フォローを外す", user_relationships_path(tweet.user.id), method: :delete %>
             <% else %>
-              <%= link_to "フォローする", user_relationships_path(tweet.user.id), method: :post %>
+              <%= link_to "+フォローする", user_relationships_path(tweet.user.id), method: :post %>
             <% end %>
           </div>
           <p><%= tweet.text %></p>
