--- a/app/views/body_makes/index.html.erb
+++ b/app/views/body_makes/index.html.erb
@@ -8,7 +8,7 @@
             <div class='body_make-img-content'>
               <h2><%#= body_make.user.name %></h2>
               <h3><%= body_make.weight %>kg</h3>
-              <%= body_make.updated_at.strftime("%Y年%m月%d日")%>
+              <%= body_make.start_time.strftime("%Y年%m月%d日")%>
               <p><%= body_make.text %></p>
                 <% if body_make.image.present? %>
                 <%= image_tag body_make.image, class: "body-make-img" %>
