--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,12 @@
       <% end %>
     </div>
   <% end %>
+
+    <%# <% @meal_records.each do |meal_record|%> 
+    <%# <div class="weight"> %>
+      <%# <%= link_to "食事内容", meal_record_path(meal_record.id) %> 
+    <%# </div> %>
+  <%# <% end %> 
 <% end %>
 
 <%# <%= line_chart BodyMake.group_by_day(:start_time, :weight).count %> 
