ツイート詳細ページの編集

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,8 +34,8 @@
 
 .col-2 {
   display: flex;
-  align-items: flex-start
-  
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .follow-btn {
