--- a/app/views/tweets/show.html.erb
+++ b/app/views/tweets/show.html.erb
@@ -4,15 +4,14 @@
       <h2><%= link_to @tweet.user.name, user_path(@tweet.user) %></h2>
 
       <% if user_signed_in? && current_user.id == @tweet.user_id %>
+      <%= link_to "削除する", tweet_path(@tweet.id), method: :delete, class: :tweet__btn %> 
       <p><%= @tweet.text %></p>
-        <%# <div class="tweet__manage">
-          <%= link_to "削除する", tweet_path(@tweet.id), method: :delete, class: :tweet__btn %> 
+        <div class="tweet__manage" >
         </div>
       <% end %>
       <% if @tweet.image.present? %>
         <div class="tweet-img-content">
           <%= image_tag @tweet.image, class:"tweet-img"%>
-        </div>
         <% end %>
       <div class="tweet__comments">
 
@@ -27,19 +26,18 @@
             </div>
             <% end %>
           <% end %>
-
         <ul class="comments_lists">
-
             <li class="comments_list">
             <% @comments.each do |comment| %>
               <p>
                 <%= comment.text %>
                 <%= link_to comment.user.name, user_path(comment.user_id), class: :comment_user %>
-              <p>
+              </p>
               <% end %>
             </li>
         </ul>
       </div>
     </div>
   </div>
+</div>
 </main>
