--- a/app/assets/stylesheets/tweet.css
+++ b/app/assets/stylesheets/tweet.css
@@ -22,8 +22,25 @@
 .tweet__wrapper a {
   background-color: #fff;
 color: #2a2b2f;
+font-weight: bold;
+}
+
+.tweet__comments {
+  margin-top: 10px;
 }
 
 .comments_list {
   list-style: none;
+}
+
+.comments_list p { 
+  display: flex;
+  border-radius: 10px;
+  height: 50px;
+  box-shadow: 10px 10px 10px #2a2b2f;
+  background-color: #fff;
+  text-align: center;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
 }
