栄養素の表示

--- a/app/views/meal_records/_form.html.erb
+++ b/app/views/meal_records/_form.html.erb
@@ -19,7 +19,7 @@
 
 
   <div class="field">
-    <ul class="nutrient_component">
+    <ul class="nutrient">
       <li>
         <%= f.label :protein, "タンパク質" %><br />
         <%= f.text_field :protein, class:"form-text-int" %>g
