--- a/app/views/meal_records/index.html.erb
+++ b/app/views/meal_records/index.html.erb
@@ -11,7 +11,7 @@
               <%= meal_record.updated_at.strftime("%Y年%m月%d日")%>の
               <%= meal_record.meal_time.name %>
               <p><%= meal_record.calorie %> kcal</p>
-              <div class = "">
+              <div class = "nutrient">
                 <% if meal_record.protein.present? %>
                   <p>タンパク質<%= meal_record.protein %>g</p>
                 <% end%>
