フォームの位置

--- a/app/assets/stylesheets/form.css
+++ b/app/assets/stylesheets/form.css
@@ -1,9 +1,9 @@
 form {
   display: inline-block;
   border-radius: 10px;
-  /* top: 100px;
+  top: 100px;
   left: 20px;
-  position: fixed; */
+  position: fixed;
   margin-top: px;
   padding: 30px 16px;
   width: 400px;
